/*
 * Copyright 2022 Quentin Ligier. Use of this source code is governed by the MIT license.
 */

plugins {
    id("java")
    id("org.jetbrains.intellij") version "1.10.0"
}

group = "ch.qligier.jetbrains.plugin.fhir"
version = "1.0-SNAPSHOT"

sourceSets["main"].java.srcDirs("src/main/gen")

repositories {
    mavenCentral()
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
    testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.0")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
    testRuntimeOnly("org.junit.platform:junit-platform-runner:1.9.1")
}

// Configure Gradle IntelliJ Plugin
// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
intellij {
    version.set("2021.3.3")
    type.set("IC") // Target IDE Platform

    plugins.set(listOf("org.intellij.intelliLang"))
}

tasks {
    // Set the JVM compatibility versions
    withType<JavaCompile> {
        sourceCompatibility = "11"
        targetCompatibility = "11"
    }

    test {
        useJUnitPlatform()
    }

    patchPluginXml {
        sinceBuild.set("213")
        untilBuild.set("223.*")
    }

    signPlugin {
        certificateChain.set(System.getenv("CERTIFICATE_CHAIN"))
        privateKey.set(System.getenv("PRIVATE_KEY"))
        password.set(System.getenv("PRIVATE_KEY_PASSWORD"))
    }

    publishPlugin {
        token.set(System.getenv("PUBLISH_TOKEN"))
    }

    setupDependencies {
        doLast {
            // Fixes https://youtrack.jetbrains.com/issue/IDEA-298989
            // Should be fixed with Gradle plugin v1.10.0
            fileTree("$buildDir/instrumented/instrumentCode") { include("**/IgPublisherSettingsEditor.class") }.files.forEach {
                delete(
                    it
                )
            }
        }
    }
}
